Negative `z-index` for zoomable container Addresses issue with users not being to interact with elements on the page

--- a/zoomage.css
+++ b/zoomage.css
@@ -5,6 +5,7 @@ html, body{
 
 .zoomage-container{
   position: relative;
+  z-index: -1;
 }
 
 .zoomage-section{
